Fix bug where hex numbers too short

--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
 
 .grid-container {
     display: grid;
-    width: 600px;
-    border: 1px solid black;
+    width: 700px;
+    border: .5px solid black;
     margin: 0 auto;
 }
 
